--- a/templates/renter/booking_details.html
+++ b/templates/renter/booking_details.html
@@ -142,7 +142,7 @@
                                                 <table class="table table-bordered table-striped text-center align-middle detail-table">
                                                     <tr>
                                                         <th class="align-middle" style="width: 20%">Homestay:</th>
-                                                        <td class="align-middle">{{ booking.room.homestay.title }}</td>
+                                                        <td class="align-middle">{{ booking.room.title }}</td>
                                                         <th class="align-middle" style="width: 20%">Room:</th>
                                                         <td class="align-middle">Room {{ booking.room.room_number }}</td>
                                                     </tr>
@@ -150,7 +150,7 @@
                                                         <th class="align-middle">Room Type:</th>
                                                         <td class="align-middle">{{ booking.room.room_type }}</td>
                                                         <th class="align-middle">Address:</th>
-                                                        <td class="align-middle">{{ booking.room.homestay.address }}, {{ booking.room.homestay.city }}</td>
+                                                        <td class="align-middle">{{ booking.room.address }}, {{ booking.room.city | location_name('city') }}</td>
                                                     </tr>
                                                 </table>
                                             </div>
@@ -168,7 +168,7 @@
                                             {% endif %}
                                             
                                             {% if booking.room is not none %}
-                                                <a href="{{ url_for('renter.book_homestay', homestay_id=booking.room.homestay.id) }}" class="detail-action-button book-again-btn">
+                                                <a href="{{ url_for('renter.book_room', room_id=booking.room.id) }}" class="detail-action-button book-again-btn">
                                                     <i class="bi bi-calendar-plus"></i> Đặt phòng lại
                                                 </a>
                                             {% endif %}
