--- a/templates/renter/view_room_detail.html
+++ b/templates/renter/view_room_detail.html
@@ -6,7 +6,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{{ url_for('home') }}" data-translate="home">Home</a></li>
-            <li class="breadcrumb-item"><a href="{{ url_for('renter.view_homestay', id=room.homestay.id) }}">{{ room.homestay.title }}</a></li>
+            <li class="breadcrumb-item"><a href="{{ url_for('renter.view_room', id=room.homestay.id) }}">{{ room.homestay.title }}</a></li>
             <li class="breadcrumb-item active"><span data-translate="room">Room</span> {{ room.room_number }}</li>
         </ol>
     </nav>
@@ -323,10 +323,10 @@
                 {% endif %}</p>
                     
                     <div class="d-grid gap-2 mt-4">
-                        <a href="{{ url_for('renter.book_homestay', homestay_id=room.homestay.id) }}" class="btn btn-lg btn-primary">
+                        <a href="{{ url_for('renter.book_room', room_id=room.id) }}" class="btn btn-lg btn-primary">
                             <i class="bi bi-calendar-check"></i> <span data-translate="book-room">Book This Room</span>
                         </a>
-                        <a href="{{ url_for('renter.view_homestay', id=room.homestay.id) }}" class="btn btn-outline-secondary">
+                        <a href="{{ url_for('renter.view_room', id=room.homestay.id) }}" class="btn btn-outline-secondary">
                             <i class="bi bi-arrow-left"></i> <span data-translate="back-to-homestay">Back to Homestay</span>
                         </a>
                     </div>
